<?xml version="1.0"?>
<package format="2">
  <name>abb_robot_driver_state_machine</name>
  <version>0.1.0</version>
  <description>The abb_robot_driver_state_machine package</description>

  <maintainer email="d.kroezen@tudelft.nl">Dave Kroezen (SAM|XL)</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>abb_egm_msgs</exec_depend>
  <exec_depend>abb_rapid_sm_addin_msgs</exec_depend>
  <exec_depend>abb_robot_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>

</package>
